# candidate-pooling

./: .gitignore  CONTEXT.md  README.md  environment.yml  pyproject.toml  pyrightconfig.json
src/: launch.py
src/candidate_pooling/: basis.py  cluster.py  data.py  evaluate.py  fingerprint.py  mining.py  model.py  pipeline.py  types.py  util.py
src/candidate_pooling/analysis/: analysis-testing.ipynb  analysis.py  dashboard.py
src/candidate_pooling/lib/: dataset_utils.py  tensor_cache.py  typed_dataset.py
src/lib/: slurm_launcher.py
src/lib/templates/: slurm.jinja
