[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate_pooling"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mirror_pipeline @ file:///home/kobyjl/MIRROR-Pipeline",
    "torch==2.11.0+cu126",
    "scikit-learn==1.8.0",
    "numpy==2.4.4",
    "byutils @ git+https://github.com/Plyb/byutils.git",
    "nnsight==0.7.0",
    "jaxtyping==0.3.3",
    "matplotlib==3.10.9",
    "umap-learn==0.5.12",
    "notebook==7.5.6",
    "jupyterlab==4.5.7",
    "ipykernel==7.2.0",
    "ipywidgets==8.1.8",
]

[project.optional-dependencies]
dev = ["pyright==1.1.409"]

[tool.setuptools.packages.find]
where = ["src"]
